Showcase: Fix scrollbars on Vehicle Selection

--- a/widgets/showcase/src/styles/components/RideStylerShowcaseVehicleSelection.scss
+++ b/widgets/showcase/src/styles/components/RideStylerShowcaseVehicleSelection.scss
@@ -101,6 +101,7 @@
 .vsm-line-step {
     .dot-info, .dot-info.active {
         font-size: 1em;
+        overflow-y: hidden;
     }
     .dot-info-before {
         left: -48%;
